--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ buildscript {
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.31'
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.6.10"
         classpath 'org.jlleitschuh.gradle:ktlint-gradle:9.4.1'
+        classpath "com.vanniktech:gradle-android-junit-jacoco-plugin:0.16.0"
+        classpath "org.jacoco:org.jacoco.core:0.8.7"
     }
 }
 
@@ -56,6 +58,7 @@ ext {
     compileSdkVersion = 30
     minSdkVersion = 16
     targetSdkVersion = 30
+    jacocoVersion = '0.8.4'
 
     awsSdkVersion = '2.50.1'
     fragmentVersion = '1.3.1'
@@ -133,6 +136,8 @@ ext {
 subprojects { project ->
     afterEvaluate {
         configureAndroidLibrary(project)
+        project.apply from: '../jacoco.gradle'
+        //project.apply from: '../jacoco-codecov.gradle'
     }
 }
 
@@ -165,6 +170,11 @@ private void configureAndroidLibrary(Project project) {
                 animationsDisabled = true
                 unitTests {
                     includeAndroidResources = true
+                }
+                unitTests.all {
+                    jacoco {
+                        includeNoLocationClasses = true
+                    }
                 }
             }
         }
