--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -24,7 +24,7 @@ jobs:
 
       # Execute unit tests
       - name: Unit Test with Android Emulator Runner
-      - uses: actions/setup-java@v3
+        uses: actions/setup-java@v3
         with:
           java-version: '8'
           distribution: 'corretto'
