--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -29,7 +29,7 @@ jobs:
           java-version: '8'
           distribution: 'corretto'
 
-      - run: ./gradlew jacocoTestReport
+      - run: ./gradlew aws-storage-s3:jacocoTestReport
           #./gradlew createDebugCoverageReport:
 
         # run: ./gradlew testDebugUnitTest
