--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -29,7 +29,7 @@ jobs:
           java-version: '8'
           distribution: 'corretto'
 
-      - run: ./gradlew jacocoTestReport
+      - run: ./gradlew aws-storage-s3:jacocoTestReport
           #./gradlew createDebugCoverageReport:
 
         # run: ./gradlew testDebugUnitTest
@@ -38,7 +38,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: report
-          path: .**/build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml
+          path: /**/build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml
             # path: app/build/test-results
 
       - name: Upload Test Report
