--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
+      - run mkdir
       # Execute unit tests
       - name: Unit Test with Android Emulator Runner
         uses: actions/setup-java@v3
@@ -38,11 +38,14 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: report
-          path: ../**/build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml
+          path: .*/build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml
             # path: app/build/test-results
+
+      - run: mkdir /home/runner/work/amplify-android/amplify-android/code-coverage
+      - run: cp -r /home/runner/work/amplify-android/amplify-android/**/build/coverage-report/*.xml /home/runner/work/amplify-android/amplify-android/code-coverage
 
       - name: Upload Test Report
         uses: codecov/codecov-action@v3
         with:
           name: report
-          files: ../**/build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml
+          files: code-coverage/jacocoTestReport.xml
