--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -49,4 +49,4 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           name: report
-          files: code-coverage/jacocoTestReport.xml
+          files: code-coverage/*.xml
