--- a/codecov.yml
+++ b/codecov.yml
@@ -6,3 +6,7 @@ coverage:
     patch:
       default:
         informational: true
+comment:
+  layout: diff
+  behavior: default
+  require_changes: false
